--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.56.2",
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
     "humanize-duration": "^3.33.1",
     "quill": "^2.0.3",
     "rc-progress": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
+    "react-toastify": "^11.0.5",
     "react-youtube": "^10.1.0",
     "tailwindcss": "^4.1.17",
     "uniqid": "^5.4.0"
