--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "rc-progress": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^7.9.6",
     "react-toastify": "^11.0.5",
+    "react-typed": "^2.0.12",
     "react-youtube": "^10.1.0",
     "tailwindcss": "^4.1.17",
     "uniqid": "^5.4.0"
