--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "humanize-duration": "^3.33.1",
+    "motion": "^12.23.24",
     "quill": "^2.0.3",
     "rc-progress": "^4.0.0",
     "react": "^19.2.0",
